Fixing background bug in macOS Mojave dark mode

--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -1,5 +1,6 @@
 #master {	
 	opacity: 0;
+	background: #FFFFFF;
 }
 
 input#search {
